# Chip8Emu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: emu.rs  frontend.rs  main.rs  util.rs
src/emu/: display.rs  keyboard.rs  memory.rs  mod.rs  timer.rs
src/frontend/: mod.rs  term.rs
src/frontend/term/: consoleapi.rs  mod.rs  unixterm.rs  winterm.rs
src/frontend/term/unixterm/: termios_extended.rs
src/frontend/term/winterm/: consoleapi.rs
src/util/: winapi.rs
src/util/winapi/: consoleapi.rs  timeapi.rs
