[package]
name = "chip8emu"
version = "0.1.0"
authors = ["'pdamianik' <'39028343+pdamianik@users.noreply.github.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
rand = "0.8.4"

[target.'cfg(windows)'.dependencies]
#winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[features]
default = ["tui"]
tui = []

[profile.dev]
overflow-checks = false
